--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,8 +1,11 @@
 body {
+  width: 100%;
   margin: 0;
-  font-family: 'Arial', sans-serif;
+  font-family: "Arial", sans-serif;
   background-color: #f4f4f4;
   color: #333;
+  height: 100vh;
+  width: 100vw;
 }
 
 .App {
