--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2,7 +2,7 @@ body {
   width: 100%;
   margin: 0;
   font-family: "Arial", sans-serif;
-  background-color: #f4f4f4;
+  /* background-color: #f4f4f4; */
   color: #333;
   height: 100vh;
   width: 100vw;
