Disable eslint to silent linting errors

--- a/src/components/DetailsPage.css
+++ b/src/components/DetailsPage.css
@@ -20,9 +20,10 @@
 }
 
 .card {
-  width: 250px;
+  width: auto;
   height: 300px;
   display: flex;
+  background-color: #e0f7ea;
   justify-content: center;
   align-items: center;
   border-radius: 10px;
