--- a/src/components/Details/DetailsPage.css
+++ b/src/components/Details/DetailsPage.css
@@ -23,7 +23,7 @@
   width: auto;
   height: 300px;
   display: flex;
-  background-color: #e0f7ea;
+  background-color: #f8f8f8;
   justify-content: center;
   align-items: center;
   border-radius: 10px;
