--- a/src/components/Awareness/AwarenessSection.css
+++ b/src/components/Awareness/AwarenessSection.css
@@ -1,10 +1,45 @@
-.container {
-  font-family: "Poppins", sans-serif;
-}
-
 .fixed-size {
   width: 100%;
   height: 200px;
   object-fit: cover;
   border-radius: 8px;
+}
+
+.awareness-section {
+  position: relative; /* Position relative for absolute positioning of pseudo-elements */
+  /* background: #f8f8ff; */
+  margin-top: 40px;
+  padding: 20px;
+  overflow: hidden; /* Hide overflow to prevent scrollbars */
+}
+
+/* Pseudo-elements for the blurred circles */
+.awareness-section::before,
+.awareness-section::after {
+  content: "";
+  position: absolute;
+  border-radius: 50%;
+  background: rgba(
+    99,
+    102,
+    241,
+    0.2
+  ); /* Light purple color with some opacity */
+  filter: blur(100px); /* Blurring effect */
+  z-index: 0; /* Place behind the content */
+}
+
+/* Specific styles for random positioning */
+.awareness-section::before {
+  width: 200px;
+  height: 200px;
+  top: 30%;
+  left: 10%;
+}
+
+.awareness-section::after {
+  width: 300px;
+  height: 300px;
+  bottom: 10%;
+  right: 0%;
 }
