--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -9,7 +9,7 @@
   position: relative;
   overflow: hidden;
   margin: auto;
-  padding: 40px;
+  padding: 20px;
 
   display: flex;
   justify-content: center;
@@ -66,7 +66,8 @@
 .carousel-container {
   position: relative;
   width: 100%;
-  padding: 20px;
+  /* padding: 20px; */
+  padding: 10px 0;
   margin: auto;
   overflow: hidden;
 }
