--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -20,3 +20,14 @@
 .footer li {
   margin-top: 10px;
 }
+
+.footer .col-md-6 {
+  padding-right: 10px;
+  padding-left: 0;
+}
+
+/* Add margin to push Quick Links and Policies to the right */
+.footer .col-md-8 {
+  margin-left: auto; /* Moves the section to the right */
+  padding-left: 50px; /* Adds space between the left section and right columns */
+}
