--- a/src/components/Map/Modal.css
+++ b/src/components/Map/Modal.css
@@ -56,7 +56,7 @@
 
 .arrow-left,
 .arrow-right {
-  background-color: #6366f1;
+  background-color: #ccc;
   border: none;
   font-size: 24px;
   cursor: pointer;
