--- a/src/components/StatsSource/StatsSource.css
+++ b/src/components/StatsSource/StatsSource.css
@@ -1,5 +1,5 @@
 .custom-select-wrapper {
-  background-color: #f0f4ff;
+  /* background-color: #f0f4ff; */
   border-radius: 50px;
   padding: 4px;
   margin: 20px 0;
@@ -16,12 +16,11 @@
 }
 
 .custom-select-container {
-  position: relative;
   margin-left: 10px;
 }
 
 .custom-select {
-  appearance: none; /* Removes default styling */
+  appearance: none;
   border: none;
   background-color: #6366f1;
   color: white;
@@ -33,22 +32,21 @@
   cursor: pointer;
   outline: none;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-  width: auto; /* Ensure the select box width doesn't expand */
+  width: auto;
 }
 
 .custom-select::after {
   content: "";
+  text-align: center;
   position: absolute;
-  right: 15px;
-  top: 50%;
   transform: translateY(-50%);
   border: 6px solid transparent;
-  border-top-color: white; /* Arrow color */
+  border-top-color: white;
   pointer-events: none;
 }
 
 .custom-select:hover {
-  background-color: #4f46e5; /* Darker hover effect */
+  background-color: #4f46e5;
 }
 
 .custom-select option {
