--- a/src/components/Recommend/Recommend.css
+++ b/src/components/Recommend/Recommend.css
@@ -1,13 +1,14 @@
 .recommend-page-container {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
   padding: 20px;
-  height: auto; /* Auto height to prevent scrolling */
+  min-height: 100vh;
+  margin-top: 20px;
 }
 
 .input-bar-container {
-  flex: 1; /* Take up 1/5 of the width */
+  flex: 1;
   padding: 20px;
   margin-right: 20px;
   display: flex;
@@ -32,9 +33,10 @@
   width: 100%; /* Full width of grid column */
   height: 400px; /* Fixed height for uniformity */
   padding: 20px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
+  background-color: white;
   box-sizing: border-box;
-  justify-content: space-between; /* Ensure the button section stays at the bottom */
+  justify-content: space-between;
 }
 
 .title-bar {
@@ -42,7 +44,7 @@
   justify-content: space-between;
   width: 100%;
   font-size: 1.2rem;
-  font-weight: bold;
+  /* font-weight: bold; */
   padding-bottom: 10px;
   border-bottom: 2px solid #ccc;
 }
@@ -68,15 +70,15 @@
 
 /* Image section */
 .content-image {
-  flex-grow: 1; /* Take up remaining space for image */
+  flex-grow: 1;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .card-image {
-  width: 100px;
-  height: 100px;
+  width: 150px;
+  height: 150px;
   object-fit: contain;
 }
 
@@ -89,7 +91,7 @@
 }
 
 .switch-button {
-  background-color: #007bff;
+  background-color: #6366f1;
   color: white;
   border: none;
   border-radius: 5px;
@@ -107,16 +109,5 @@
 }
 
 .switch-button:hover {
-  background-color: #0056b3;
-}
-
-.footer {
-  position: relative;
-  bottom: 0;
-  width: 100%;
-  background-color: #f1f1f1;
-  text-align: center;
-  padding: 20px;
-  font-size: 14px;
-  color: #333;
+  background-color: #6366f1;
 }
