--- a/src/components/Information/Information.css
+++ b/src/components/Information/Information.css
@@ -63,7 +63,7 @@
 }
 
 .download-content {
-  background-image: url(../../../public/images/nutrition.png);
+  background-image: url(../../../public/images/nutrition.jpg);
   background-size: cover;
   background-position: center;
   border-radius: 10px;
