--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,9 @@
 #root {
-  max-width: 1280px;
+  min-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  /* padding: 2rem; */
   text-align: center;
-  width: 100vw;
-  height: 100vh;
+  /* background: #fafafa; */
 }
 
 .logo {
@@ -36,7 +35,7 @@
 }
 
 .card {
-  padding: 2em;
+  /* padding: 2em; */
 }
 
 .read-the-docs {
