--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,10 +1,10 @@
 .glass-card {
   background: rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(10px);
-  border-radius: 10px;
+  border-radius: 5px;
   box-shadow: 5px 0 15px 2px rgba(141, 142, 157, 0.1);
   width: 100%;
-  max-width: 90vw;
+  max-width: 95vw;
   min-height: 500px;
   position: relative;
   overflow: hidden;
@@ -14,17 +14,16 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-
   transition: transform 0.5s ease, box-shadow 0.5s ease;
 }
 
 .glass-card:hover {
-  transform: scale(1.02);
+  transform: scale(1.008);
   box-shadow: 5px 0 15px 0 rgba(141, 142, 157, 0.2);
 }
 
 .slide-content:hover {
-  transform: scale(1.02);
+  transform: scale(1.008);
   box-shadow: 5px 0 15px 0 rgba(141, 142, 157, 0.2);
 }
 
@@ -150,7 +149,8 @@
 }
 
 .slide-content {
-  width: 98%;
+  margin-left: 40px;
+  max-width: 95vw;
   position: relative;
   overflow: hidden;
   transition: transform 0.5s ease, box-shadow 0.5s ease;
