--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,17 +1,24 @@
-.nav-btn-custom {
-  background: #6366f1;
-  border-color: #6366f1;
-  color: white;
-  padding: 8px 15px;
-  border: none;
+/* Ensuring the dropdown opens on hover */
+.nav-item.dropdown:hover .dropdown-menu {
+  display: block;
 }
 
-.nav-btn-custom:hover {
-  background: #4b4ade;
-  border-color: #4b4ade;
-  color: white;
+/* Styling the dropdown */
+.dropdown-menu {
+  border-radius: 0;
+  margin-top: 0; /* Aligns the dropdown right under the nav item */
+  background-color: rgba(250, 250, 250, 0.9); /* Matches the glass effect */
+  /* backdrop-filter: blur(10px); */
+  webkit-backdrop-filter: blur(10px);
 }
 
-.nav-item:hover {
-  color: #6366f1;
+/* Styling the dropdown items */
+.dropdown-item {
+  color: #666;
+  font-size: 15px;
+  padding: 10px 20px;
+}
+
+.dropdown-item:hover {
+  background-color: #eaeaea;
 }
