--- a/src/components/StatsSource/StatsSource.css
+++ b/src/components/StatsSource/StatsSource.css
@@ -24,15 +24,16 @@
   border: none;
   background-color: #6366f1;
   color: white;
-  padding: 10px 40px 10px 15px;
+  padding: 8px;
   border-radius: 25px;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: medium;
   text-align: center;
   cursor: pointer;
   outline: none;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   width: auto;
+  transition: all 0.4s ease;
 }
 
 .custom-select::after {
