--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 #root {
-  min-width: 1280px;
+  max-width: 100vw;
   margin: 0 auto;
   /* padding: 2rem; */
   text-align: center;
@@ -8,7 +8,7 @@
 
 .logo {
   height: 6em;
-  padding: 1.5em;
+  /* padding: 1.5em; */
   will-change: filter;
   transition: filter 300ms;
 }
@@ -32,12 +32,4 @@
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
   }
-}
-
-.card {
-  /* padding: 2em; */
-}
-
-.read-the-docs {
-  color: #888;
 }
