--- a/src/components/Recommend/InputBar.css
+++ b/src/components/Recommend/InputBar.css
@@ -5,9 +5,9 @@
   align-items: center;
   border: 1.5px solid #ececec;
   border-radius: 50px;
-  padding: 14px 20px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
-  max-width: 60vw;
+  padding: 10px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  max-width: 70vw;
   margin: 30px auto;
   background-color: #fff;
 }
