--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -2,13 +2,14 @@
 .nav-item.dropdown:hover .dropdown-menu {
   display: block;
   animation: fadeIn 0.3s ease-in-out;
-  min-width: 100vw;
+  /* min-width: 100vw; */
   justify-content: center;
 }
 
 /* Styling the dropdown */
 .dropdown-menu {
-  border: none;
+  /* border: none; */
+  /* width: 400px; */
   border-radius: 5px;
   margin-top: 0;
   background-color: rgba(250, 250, 250, 0.98);
